--- a/scss/_varables.scss
+++ b/scss/_varables.scss
@@ -15,4 +15,4 @@
     // Neutral
 
     $color-DarkBlue: hsl(249, 10%, 26%); 
-    $color-GrayishBlue: hsl(246, 25%, 77%);
+    $color-GrayisBlue: hsl(246, 25%, 77%);
