--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,8 +6,15 @@
     border: 0;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
+    display: flex;
+    flex-direction: column;
     background: $color-Red;
+    background-image: url(../images/bg-intro-desktop.png);
     font-family: Poppins;
     font-size: 16px;
 }
@@ -16,9 +23,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 200px auto;
+    margin: auto;
     max-width: 900px;
-    height: 500px;
 }
 
 .description {
@@ -97,4 +103,10 @@ body {
         color: $color-Red;
         font-weight: 700;
     }
+}
+
+footer {
+    padding: 0;
+    text-align: center;
+    font-size: 12px;
 }
