--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ body {
   box-shadow: 0px 7px 3px rgba(0, 0, 0, 0.158);
   background-color: #6055a5;
   color: white;
+  cursor: pointer;
 }
 
 .signup__container {
@@ -88,6 +89,10 @@ body {
   border: 2px solid rgba(40, 40, 187, 0.39);
 }
 
+.js-block {
+  border: 2px solid #ff7a7a;
+}
+
 .buy-trial {
   height: 50px;
   border-radius: 5px;
@@ -97,6 +102,7 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   color: white;
+  cursor: pointer;
 }
 
 .warning {
