--- a/css/style.css
+++ b/css/style.css
@@ -77,11 +77,13 @@ body {
 }
 
 .form__input {
+  font-size: 15px;
   height: 50px;
   border: 1px solid rgba(165, 165, 185, 0.39);
   border-radius: 5px;
   padding-left: 15px;
-  margin-bottom: 15px;
+  padding-right: 15px;
+  margin-top: 5px;
   font-weight: 600;
 }
 .form__input:focus {
@@ -90,12 +92,30 @@ body {
 }
 
 .js-block {
+  color: #ff7a7a;
   border: 2px solid #ff7a7a;
+  margin-top: 15px;
+  background-image: url(../images/icon-error.svg);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-origin: content-box;
+}
+
+.empty-message {
+  color: white;
+  margin-top: 5px;
+  text-align: right;
+  font-weight: 600;
+}
+
+.js-block-message {
+  color: #ff7a7a;
 }
 
 .buy-trial {
   height: 50px;
   border-radius: 5px;
+  margin-top: 15px;
   margin-bottom: 15px;
   box-shadow: 0px 3px #00ca00;
   background-color: #38cc8c;
